# libmagic-rs

./: .coderabbitai.yaml  .gitignore  .gitmodules  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml  justfile  nonexistent.magic  rust-toolchain.toml  rust_libmagic_spec.md
.github/: commit-instructions.md  copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  compatibility.yml  copilot-setup-steps.yml  release.yml  security.yml
.kiro/hooks/: ci-auto-fix.kiro.hook  code-quality-check.kiro.hook  docs-sync-hook.kiro.hook  llms-txt-updater.kiro.hook  markdown-format-fix.kiro.hook  rust-code-analyzer.kiro.hook  rust-perf-analyzer.kiro.hook  rust-perf-optimizer.kiro.hook  rust-quality-monitor.kiro.hook  rust-security-analyzer.kiro.hook  rust-security-hardening.kiro.hook
.kiro/specs/rust-libmagic-implementation/: design.md  requirements.md  tasks.md
.kiro/steering/: development.md  product.md  structure.md  tech.md
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  ast-structures.md  cli-reference.md  cli-usage.md  code-style.md  compatibility.md  configuration.md  development.md  error-handling.md  evaluator.md  getting-started.md  introduction.md  io-performance.md  library-api.md  magic-examples.md  magic-format.md  migration.md  output.md  parser.md  performance.md  release-process.md  testing-guidelines.md  testing.md  troubleshooting.md
src/: lib.rs  main.rs
src/evaluator/: mod.rs  offset.rs  operators.rs  types.rs
src/io/: mod.rs
src/output/: mod.rs  text.rs
src/parser/: ast.rs  grammar.rs  mod.rs
tests/: cli_integration_tests.rs  compatibility_tests.rs
tests/compatibility/: README.md
tests/snapshots/: cli_integration_tests__binary_file_handling.snap  cli_integration_tests__conflicting_output_formats.snap  cli_integration_tests__custom_magic_file.snap  cli_integration_tests__empty_file_error.snap  cli_integration_tests__help_output.snap  cli_integration_tests__json_output_structure.snap  cli_integration_tests__large_file_handling.snap  cli_integration_tests__magic_file_fallback.snap  cli_integration_tests__missing_file_argument.snap  cli_integration_tests__nonexistent_file_error.snap  cli_integration_tests__text_output_format_explicit.snap  cli_integration_tests__version_output.snap
